--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
+html,
 body {
-  font-family: 'Montserrat', sans-serif;
+  height: 100%;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+}
+
+.navbar {
+  padding: 1% 0;
+  font-size: 1.2rem;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.page-header {
+  background-color: red;
+  background-image: url(../images/mountains.jpeg);
 }
