--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@
   background-color: rgb(226, 226, 226);
   margin: 5px;
   border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 1024px) {
@@ -115,6 +116,18 @@
     opacity: 1;
     transform: translateX(0px);
   }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
 
 /* home section styling */
