--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,22 @@
   text-decoration: none;
 }
 
+body {
+  background-color: #eeeeee;
+}
+
+.container {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
+}
+
+section {
+  height: 100vh;
+  scroll-snap-align: start;
+  padding: 40px 0;
+}
+
 .max-width {
   max-width: 1300px;
   padding: 0 80px;
@@ -164,14 +180,12 @@
 }
 
 /* about section styling */
-section {
-  padding: 40px 0;
-}
 
 .about {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   font-family: "Poppins", sans-serif;
+  display: flex;
 }
 
 .about .title {
@@ -203,7 +217,7 @@ section {
   padding: 5px;
   font-size: 20px;
   color: #00003f;
-  background: #fff;
+  background: #eeeeee;
   transform: translateX(-50%);
 }
 
@@ -292,7 +306,11 @@ section {
 
 /* skills section styling */
 .skills {
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .skills .container {
@@ -310,7 +328,8 @@ section {
   text-align: center;
   font-size: 40px;
   font-weight: 500;
-  margin-bottom: 60px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding-bottom: 20px;
   font-family: "Ubuntu", sans-serif;
 }
@@ -334,7 +353,7 @@ section {
   padding: 5px;
   font-size: 20px;
   color: #00003f;
-  background: #fff;
+  background: #eeeeee;
   transform: translateX(-50%);
 }
 
@@ -351,7 +370,7 @@ section {
 }
 
 .skill-title img {
-  height: 100px;
+  height: 80px;
 }
 
 .skill-box {
@@ -364,13 +383,13 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   overflow: hidden;
 }
 .projects .container {
   display: flex;
-  height: 50vh;
+  height: 80vh;
   width: 90vw;
 }
 
@@ -426,7 +445,7 @@ section {
   padding: 5px;
   font-size: 20px;
   color: #00003f;
-  background: #fff;
+  background: #eeeeee;
   transform: translateX(-50%);
 }
 
