--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,27 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  height: 100vh;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* navbar styling*/
 header {
+  position: fixed;
   height: 10vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #00003f;
+  background-color: #000;
 }
 
-.logo {
+.logo a {
   margin: 2rem;
   font-family: "Alata", sans-serif;
   color: #fff;
@@ -34,7 +45,7 @@ header {
 .navbar {
   display: flex;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   font-weight: 500;
 }
 
@@ -57,7 +68,7 @@ header {
     flex-direction: column;
     gap: 2em;
     padding: min(30vh, 10rem) 2em;
-    background-color: #00003f;
+    background-color: #000;
     z-index: 1000;
     transform: translateX(100%);
     transition: transform 350ms ease-out;
@@ -89,8 +100,11 @@ header {
 
 /* hero styling */
 #hero {
-  height: 90vh;
-  background-image: url("images/mountains.jpeg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url("images/hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -98,4 +112,161 @@ header {
 
 #hero h1 {
   font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 300;
+  color: #fff;
+  border: #fff solid;
+  padding: 2rem;
+}
+
+@media (max-width: 35em) {
+  #hero span {
+    display: block;
+  }
+}
+
+/* projects styling */
+#projects {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+}
+
+#projects h2 {
+  margin-bottom: 1.5rem;
+}
+
+.proj {
+  height: 28%;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+}
+
+.proj1 {
+  background-image: url(images/product_landing_page.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj1:hover {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(images/product_landing_page.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj2 {
+  background-image: url(images/technical_documentation_page.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj2:hover {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(images/technical_documentation_page.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj3 {
+  background-image: url(images/1.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj3:hover {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(images/1.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.proj button {
+  width: 150px;
+  height: 30px;
+  font-family: "Alata", sans-serif;
+  font-size: 1rem;
+  margin: 1rem;
+  cursor: pointer;
+  background-color: #000;
+  color: #fff;
+  border: #000 1px solid;
+}
+
+.proj button:hover,
+.proj button:focus {
+  background-color: #fff;
+  color: #000;
+}
+
+#projects .cta {
+  height: 40px;
+  width: 150px;
+  background-color: #fff;
+  border: #000 2px solid;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 0.5rem;
+}
+
+#projects .cta a {
+  font-weight: bolder;
+  font-size: 1rem;
+  color: #000;
+}
+
+#projects .cta a:hover {
+  color: #555;
+}
+
+@media (max-width: 35em) {
+  #projects {
+    padding: 7rem 2rem;
+  }
+
+  .proj {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+}
+
+/* about styling */
+#about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+#about h2 {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+}
+
+#about p {
+  width: 85%;
+  text-align: justify;
+  font-family: "Alata", sans-serif;
+  color: rgb(83, 80, 80);
+  line-height: 2;
+}
+
+@media (max-width: 35em) {
+  #about {
+    padding: 7rem 2rem;
+  }
+
+  #about img,
+  #about h2,
+  #about p {
+    padding-bottom: 2rem;
+  }
 }
