--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ header {
   align-items: center;
   justify-content: space-between;
   background-color: #000;
+  z-index: 9999;
 }
 
 .logo a {
@@ -118,6 +119,7 @@ header {
   color: #fff;
   border: #fff solid;
   padding: 2rem;
+  backdrop-filter: blur(25px);
 }
 
 @media (max-width: 35em) {
@@ -231,6 +233,10 @@ header {
     padding: 7rem 2rem;
   }
 
+  #projects h2 {
+    text-align: center;
+  }
+
   .proj {
     display: flex;
     justify-content: center;
@@ -269,4 +275,135 @@ header {
   #about p {
     padding-bottom: 2rem;
   }
+}
+
+/* skills styling */
+#skills h2 {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+}
+
+#skills img {
+  height: 100px;
+}
+
+#skills img:hover {
+  transform: translateY(-20px);
+  transition: transform 350ms;
+}
+
+.icons {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  margin: 2rem;
+  padding: 1rem;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+
+.item p {
+  margin-top: 0.7rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: "Alata", sans-serif;
+}
+
+@media (max-width: 35em) {
+  #skills {
+    padding: 7rem 2rem;
+  }
+
+  #skills h2 {
+    text-align: center;
+  }
+}
+
+/* contact styling */
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact h2 {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+}
+
+#contact .container {
+  width: 90%;
+  height: 100%;
+  margin-top: 2rem;
+  padding: 1.5rem;
+  border: 2px solid;
+}
+
+#contact form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-weight: bolder;
+  font-size: 1rem;
+  color: #000;
+  font-family: "Alata", sans-serif;
+}
+
+#contact label {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
+}
+
+#contact input {
+  height: 2rem;
+  font-size: 0.9rem;
+  font-style: italic;
+}
+
+#contact textarea {
+  font-size: 0.9rem;
+  font-style: italic;
+  margin: 0.5rem 0;
+}
+
+#contact .cta {
+  height: 40px;
+  background-color: #fff;
+  border: #000 2px solid;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: bolder;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 0.5rem;
+}
+
+#contact .cta:hover {
+  background-color: #000;
+  color: #fff;
+  border: #000 1px solid;
+}
+
+@media (max-width: 35em) {
+  #contact {
+    padding: 7rem 2rem;
+  }
+}
+
+/* footer styling */
+footer {
+  background-color: #000;
+  height: 20vh;
+  color: #fff;
+}
+
+footer ul li a {
+  color: #fff;
 }
