--- a/styles.css
+++ b/styles.css
@@ -114,15 +114,16 @@ header {
 #hero h1 {
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 2.7rem;
   font-weight: 300;
   color: #fff;
   border: #fff solid;
   padding: 2rem;
   backdrop-filter: blur(25px);
+  line-height: 1.3;
 }
 
-@media (max-width: 35em) {
+@media (max-width: 62em) {
   #hero span {
     display: block;
   }
@@ -134,11 +135,17 @@ header {
   text-transform: uppercase;
 }
 
-#projects h2 {
-  margin-bottom: 1.5rem;
+#projects .title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
 }
 
 .proj {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
   height: 28%;
   margin-bottom: 1.5rem;
   cursor: pointer;
@@ -208,14 +215,13 @@ header {
 }
 
 #projects .cta {
-  height: 40px;
-  width: 150px;
+  height: 30px;
+  width: 130px;
   background-color: #fff;
   border: #000 2px solid;
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
   cursor: pointer;
-  margin-top: 0.5rem;
 }
 
 #projects .cta a {
@@ -230,17 +236,37 @@ header {
 
 @media (max-width: 35em) {
   #projects {
-    padding: 7rem 2rem;
+    height: 100%;
+    padding: 6rem 2rem;
+    position: relative;
   }
 
   #projects h2 {
     text-align: center;
+    margin-bottom: 1.5rem;
+  }
+
+  #projects .cta {
+    position: absolute;
+    bottom: 50px;
+    margin-top: 5rem;
   }
 
   .proj {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+  }
+}
+
+@media (min-width: 36em) and (max-width: 48em) {
+  #projects {
+    width: 80%;
+    margin: 7rem auto;
+  }
+
+  .proj {
+    height: 16vh;
   }
 }
 
