--- a/styles.css
+++ b/styles.css
@@ -29,73 +29,180 @@ img {
 }
 
 /* navbar styling*/
-header {
-  position: fixed;
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #000;
-  z-index: 9999;
-}
-
-.logo a {
-  margin: 2rem;
-  font-family: "Alata", sans-serif;
-  color: #fff;
-}
-
 .navbar {
-  display: flex;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 1.7rem;
-  font-weight: 500;
-  height: 100vh;
-  position: fixed;
-  inset: 0 0 0 30%;
-  justify-content: space-evenly;
-  flex-direction: column;
-  gap: 2em;
-  padding: min(30vh, 10rem) 2em;
   background-color: #000;
-  z-index: 1000;
-  transform: translateX(100%);
-  transition: transform 350ms ease-out;
 }
 
-.navbar li a {
-  margin-right: 2rem;
+#toggle {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #000;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+#toggle::before {
+  content: " ";
+  position: absolute;
+  width: 28px;
+  height: 2px;
+  background-color: #fff;
+  transform: translateY(-5px);
+  transition: 0.2s;
+}
+
+#toggle::after {
+  content: " ";
+  position: absolute;
+  width: 28px;
+  height: 2px;
+  background-color: #fff;
+  transform: translateY(5px);
+  transition: 0.2s;
+}
+
+#toggle.active::before {
+  transform: translateY(0px) rotate(45deg);
+}
+
+#toggle.active::after {
+  transform: translateY(0px) rotate(-45deg);
+}
+
+#sidebar {
+  position: fixed;
+  top: 0;
+  left: -300px;
+  width: 300px;
+  height: 100vh;
+  background-color: #000;
+  transition: 0.5s;
+  z-index: 10;
+}
+
+#sidebar.active {
+  left: 0px;
+}
+
+#sidebar ul {
+  position: relative;
+  margin-top: 50px;
+}
+
+#sidebar ul li {
+  display: inline-block;
+  width: 100%;
+  padding: 10px 40px;
+}
+
+#sidebar ul li:hover {
+  background-color: #222;
+}
+
+#sidebar ul li a {
   color: #fff;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-.navbar li a:hover,
-.navbar li a:focus {
+/* .navbar {
+  background-color: #000;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+
+header .container {
+  border: #000 solid 2px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px 40px;
+}
+
+.nav-link {
+  margin: 20px 0;
+  width: 5rem;
+}
+
+.nav-link a {
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+}
+
+.nav-link a:hover,
+.nav-link a:focus {
   color: #ddd;
 }
 
-.navbar[data-visible="true"] {
-  transform: translateX(0%);
-}
-
 .toggle {
-  display: block;
-  position: absolute;
-  z-index: 9999;
-  background-color: transparent;
-  background-image: url("images/icon-hamburger.svg");
-  background-repeat: no-repeat;
-  width: 2rem;
-  border: 0;
-  aspect-ratio: 1;
-  top: 2rem;
-  right: 2rem;
+  background: transparent;
+  border: transparent;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
-.toggle[aria-expanded="true"] {
-  background-image: url("images/icon-close.svg");
+.flex-nav {
+  display: flex;
+  flex-direction: column;
 }
+
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-header h1 a {
+  color: #fff;
+  font-family: "Alata", sans-serif;
+  font-size: 1.5rem;
+}
+
+.nav-links {
+  height: 0;
+  overflow: hidden;
+}
+
+.nav-open {
+  height: 100vh;
+}
+
+@media (min-width: 768px) {
+  .toggle {
+    display: none;
+  }
+
+  .nav-header {
+    display: block;
+  }
+
+  .flex-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px;
+  }
+
+  .nav-links {
+    height: auto;
+  }
+
+  ul {
+    text-align: center;
+  }
+
+  .nav-link {
+    display: inline-block;
+  }
+} */
 
 /* hero styling */
 #hero {
@@ -327,7 +434,7 @@ footer {
   height: 35vh;
   background-color: #000;
   color: #fff;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
 }
 
 footer a {
@@ -350,4 +457,9 @@ footer a {
   display: flex;
   justify-content: space-evenly;
   margin: 1rem;
+}
+
+.socials {
+  background-color: #fff;
+  height: 1rem;
 }
