--- a/styles.css
+++ b/styles.css
@@ -27,23 +27,6 @@ img {
 }
 
 /* navbar styling*/
-/* .navbar {
-  background-color: #000;
-  height: 15vh;
-}
-
-.title {
-  display: flex;
-  align-items: center;
-  height: 12vh;
-}
-
-.title h1 {
-  color: #fff;
-  margin-left: 20px;
-  margin-top: 20px;
-} */
-
 #toggle {
   position: fixed;
   top: 10px;
@@ -56,6 +39,7 @@ img {
   justify-content: center;
   align-items: center;
   z-index: 10;
+  border: 2px solid #fff;
 }
 
 #toggle::before {
@@ -138,36 +122,56 @@ img {
 #hero h1 {
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
-  font-size: 2.7rem;
+  font-size: 2.2rem;
   font-weight: 300;
   color: #fff;
   border: #fff solid;
-  padding: 2rem;
+  padding: 1rem;
   margin: 2.5rem;
   backdrop-filter: blur(25px);
   line-height: 1.3;
 }
 
-#hero span {
-  display: block;
+@media (min-width: 425px) {
+  #hero h1 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  #hero h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  #hero h1 {
+    font-size: 3rem;
+  }
 }
 
 /* projects styling */
 #projects {
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
-  padding: 0 2rem;
+  padding: 1.5rem 2rem;
   position: relative;
+}
 
-  border: 1px solid red;
+#projects .title {
+  margin-bottom: 2rem;
+}
+
+.proj-container {
+  height: 75vh;
 }
 
 .proj {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 23%;
-  margin-bottom: 1.5rem;
+  height: 30%;
+  margin-bottom: 1.3rem;
   cursor: pointer;
 }
 
@@ -187,7 +191,7 @@ img {
 }
 
 .proj2 {
-  background-image: url(images/technical_documentation_page.png);
+  background-image: url(images/landing-page.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -195,7 +199,7 @@ img {
 
 .proj2:hover {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(images/technical_documentation_page.png);
+    url(images/landing-page.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -256,22 +260,95 @@ img {
   color: #555;
 }
 
+@media (min-width: 768px) {
+  .proj-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1rem;
+    margin: 0 auto;
+  }
+
+  .proj {
+    height: 100%;
+    width: 90%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .proj-container {
+    width: 90%;
+  }
+
+  #projects .title {
+    display: flex;
+    justify-content: center;
+  }
+
+  #projects h2 {
+    font-size: 2.5rem;
+  }
+}
+
 /* about styling */
 #about {
-  padding: 7rem 2rem;
+  padding: 4rem 0;
+  width: 80%;
+  margin: 0 auto;
+}
+
+#about h2 {
+  margin-top: 1rem;
+  text-align: center;
 }
 
 #about p {
   text-align: justify;
   font-family: "Alata", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: rgb(83, 80, 80);
   line-height: 2;
+  margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+  #about {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #about p {
+    margin-left: 3rem;
+  }
+
+  #about img {
+    height: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  #about {
+    width: 75%;
+  }
+
+  .text h2 {
+    font-size: 2.5rem;
+  }
+
+  #about p {
+    width: 80%;
+  }
+
+  #about img {
+    height: 70%;
+  }
 }
 
 /* skills styling */
 #skills {
-  padding: 7rem 2rem;
+  padding: 1.5rem 2rem;
 }
 
 #skills img:hover {
@@ -285,7 +362,7 @@ img {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  margin: 2rem;
+  margin: 1rem;
   padding: 1rem;
 }
 
@@ -303,15 +380,59 @@ img {
   font-family: "Alata", sans-serif;
 }
 
+@media (min-width: 375px) {
+  .item img {
+    height: 75px;
+  }
+}
+
+@media (min-width: 425px) {
+  .icons {
+    gap: 4rem;
+  }
+}
+
+@media (min-width: 768px) {
+  #skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .icons {
+    grid-template-columns: auto auto auto;
+  }
+
+  .item img {
+    height: 90px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #skills h2 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .icons {
+    gap: 5rem 7rem;
+  }
+
+  .item img {
+    height: 120px;
+  }
+}
+
 /* contact styling */
 #contact {
-  padding: 7rem 2rem;
+  padding: 2rem 2rem;
 }
 
 #contact form {
   display: flex;
   flex-direction: column;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 #contact label {
@@ -325,7 +446,7 @@ img {
   font-style: italic;
   padding: 0.3rem;
   font-weight: 500;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 #contact .cta {
@@ -346,16 +467,35 @@ img {
   color: #000;
 }
 
+@media (min-width: 768px) {
+  #contact {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  #contact h2 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-top: 4rem;
+  }
+
+  #contact form {
+    margin-top: 3rem;
+  }
+}
+
 /* footer styling */
 footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
-  height: 35vh;
+  align-items: flex-start;
+  height: 40vh;
   background-color: #000;
   color: #fff;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
 }
 
 footer a {
@@ -376,11 +516,38 @@ footer a {
 
 .right-links {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1rem;
+  justify-content: space-evenly;4
 }
 
 .socials {
   background-color: #fff;
   height: 1rem;
+}
+
+@media (min-width: 768px) {
+  footer {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4rem;
+    font-size: 1rem;
+  }
+
+  .left .left-links {
+    flex-direction: row;
+  }
+
+  .left-links li a {
+    margin-right: 0.5rem;
+  } 
+
+  .right {
+    
+
+
+    border: solid;
+  }
+
+  .left {
+    border: solid;
+  }
 }
