--- a/styles.css
+++ b/styles.css
@@ -351,15 +351,15 @@ img {
 
 @media (min-width: 1024px) {
   #about {
-    width: 75%;
+    width: 80%;
   }
 
-  .text h2 {
-    font-size: 2.5rem;
+  .about-text h2 {
+    font-size: 2rem;
   }
 
   #about p {
-    width: 80%;
+    width: 100%;
   }
 
   #about img {
